# gs-tracker

./: .dockerignore  .env.example  .flake8  .gitignore  CLAUDE.md  Claude_Code_框架对比报告_Superpowers_vs_gstack.md  DEPLOY.md  GS-Tracker-Complete-Scheme.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
deploy/: Dockerfile  docker-compose.yml  nginx.conf  update.sh
deploy/systemd/: gs-tracker.service
docs/gstack/: decisions.active.json  decisions.jsonl  learnings.jsonl  main-reviews.jsonl  qinzz-main-design-20260717-163206.md  qinzz-main-design-20260718-084521.md  qinzz-main-design-20260719-105318.md  qinzz-main-design-20260721-175806.md  qinzz-main-eng-plan-20260718.md  qinzz-main-eng-review-20260719-111057.md  qinzz-main-eng-review-test-plan-20260721-204423.md  question-log.jsonl  tasks-eng-review-20260721-204816.jsonl  timeline.jsonl
docs/plan/: eng-review.md
scripts/: backup.sh  run.sh  setup.sh
src/: __init__.py  analyzer.py  compliance.py  config.py  data_fetcher.py  main.py  news_monitor.py  notifier.py  quarter_compare.py  reporter.py  scheduler.py  storage.py  web.py
src/signals/: aggregator.py  (+8 more)
templates/: dashboard.html  index.html  report.html
tests/: conftest.py  test_analyzer.py  test_compliance.py  test_config.py  test_data_fetcher.py  test_macro_view_source.py  test_main.py  test_main_integration.py  test_notifier.py  test_quarter_compare.py  test_reporter.py  test_reporter_signals.py  test_requirements_sync.py  test_research_view_source.py  test_scheduler.py  test_storage.py  test_thirteen_dg_source.py  test_web.py
(+10 files in other folders)
