[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gs-tracker"
version = "0.1.0"
description = "高盛动向情报系统 — Goldman Sachs Intelligence System"
authors = [{name = "GS-Tracker Team"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "gunicorn>=23.0.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "pandas>=2.2.2",
    "anthropic>=0.31.0",
    "jinja2>=3.1.4",
    "matplotlib>=3.9.1",
    "apscheduler>=3.10.4",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.2",
    "pytest-asyncio>=0.23.8",
    "pytest-httpx>=0.30.0",
    "black>=24.4.2",
    "flake8>=7.1.0",
    "mypy>=1.10.1",
]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "apscheduler.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
